# utils_and_cheats

./: .gitignore  README.md
bash_utils/: Useful_Alaises_Programs  bash_tips.md
debugging_cmake/: general.md
docker/: cheat_sheet.md
email_utils/: allert_email.py  email_when_done.py
embeding_python/: CMakeLists.txt  ReadMe.md
embeding_python/src/: test_python.cpp
opencv/: ReadMe.md  gtk.md
ssh_tools/: README.md
udev_rules/: ReadMe.md
